--- a/public/style.css
+++ b/public/style.css
@@ -7,11 +7,11 @@
     --font-primary: "Poppins", sans-serif;
     --font-secondary: "Inter", sans-serif;
     /* colors */
-    --color-primary: #3D7337;
-    --color-secondary: #A5C572;
-    --color-accent: #FFA1A4;
-    --color-accent-light: #F9D3E2;
-    --color-background: #FBEAE8;
+    --color-primary: #FCFC3A;
+    --color-secondary: #A4BEE3;
+    --color-accent: #f0b521ff;
+    --color-accent-light: #e9e4b7ff;
+    --color-background: #6798E4;
     /* size */
     --sb-size: 16px;
 }
