--- a/public/style.css
+++ b/public/style.css
@@ -7,11 +7,17 @@
     --font-primary: "Poppins", sans-serif;
     --font-secondary: "Inter", sans-serif;
     /* colors */
-    --color-primary: #FCFC3A;
+    --color-primary: #01408D;
+    --color-secondary: #96ADD6;
+    --color-accent: #E75234;
+    --color-accent-light: #F8B8AF;
+    --color-background: #F3D7D3;
+
+    /* --color-primary: #FCFC3A;
     --color-secondary: #A4BEE3;
     --color-accent: #f0b521ff;
     --color-accent-light: #e9e4b7ff;
-    --color-background: #6798E4;
+    --color-background: #6798E4; */
     /* size */
     --sb-size: 16px;
 }
